--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div class="container">
-    <h2>LISTA DE TAREA</h2>
+    <h2>LISTA DE TAREA.</h2>
     <div class="input-container">
       <input id="taskInput" type="text" placeholder="Start writing and press enter to create task">
       <button onclick="addTask()">&#10148;</button>
